# simple-cheatsheet

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  initialize.rs  main.rs  settings.rs
src/entity/: cheat.rs  cheatsheet.rs  mod.rs  section.rs
