[package]
name = "simple-cheatsheet"
version = "0.1.0"
edition = "2021"
description = "<Placeholder>"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "3.2.16", features = ["derive"] }
config = "0.13.2"
crossterm = "0.24.0"
